content/boomerang-flow/3.1.0/getting-to-know/07.tasks.md
---
title: Tasks
index: 7
---

# Tasks

When in the workflow editor, notice the collapsible task palette on the left side of the Editor page.

Tasks are split into different expendable categories. Individual tasks can be dragged and dropped on the Editor graphical interface. From there, you connect tasks together in a left-to-right flow. Click the pencil icon on any task to access configuration parameters for a task.

## Identifying Attributes

Tasks themselves have a few distinguishing identifiers and attributes.

### Tasks

Tasks can be managed via Task Manager and can be labeled as `verified` or `community contribution`. _We may refer to Tasks as Template Tasks._

Tasks provided out-of-the-box with an installation are labeled as `verified` with a blue ribbon icon located to the right of the task in the palette.

Users are welcome to create their own tasks, that will be labeled as a `community contribution`. The Boomerang community provides support to verified tasks. These tasks are described in more detail below.

### System Tasks

System tasks are special tasks that affect the logic of the workflow and do not execute inside a container, but instead affect the processing of the DAG. System tasks are identified by their system label, that appears to the top left of a task when dragged onto the editor.

| Task Name | Description | Result Parameters |
| --------- | ----------- | ----------------- |
| **Acquire Lock** | Attempts to obtain a lock with the specified name. If no other workflow in the team is using a lock with that name, a lock with that name and is created. If another workflow in the team is using a lock with the specified name, the current workflow waits until the lock is available. ||
| **Manual Approval** | This task creates a pause in workflow execution. An approver can mark their approval from the execution screen. Once an approver marks 'approve' or 'deny', then the workflow will resume task execution. | |
| **Manual Task** | A step with a series of instructions in Markdown that can be followed by an end user. Can be utilized for manual steps that may occur in a Workflow. It can then be marked as successfully completed or not and still follows the link states. | |
| **Release Lock** | This task releases a lock with the specified name. | |
| **Set Result Parameter** | Create a parameter that is set on the result of the workflow. This task accepts a name and value. ||
| **Switch** | A Switch is a subtype of a system task which allows for simple branch-based decisions. <br>This task acts as a logical gate for workflows. The Switch task takes a value. This could likely be a result parameter from a previous task or an input parameter to the workflow. <br>You have the ability to conditionally control the path of execution, based on the value supplied to the switch. If a link coming off the switch has a set label that does not match the value of what was supplied to the switch, then those subsequent connected tasks will not be executed. |
| **Wait For Event** | Wait for an event from an external system to resume workflow execution. The event can be a webhook or a Cloud Event. Visit the [eventing architecture]((/boomerang-flow/architecture/eventing)) for more information.

### Custom Task

A special type of System Task. With the Custom task, you can bring your own container and run that as a task. Custom Tasks also have a specialized ability to dynamically create result parameters, see [Getting To Know Parameters](/boomerang-flow/getting-to-know/parameters).

## Task Versioning

We may publish a new version of a task if we want to add additional parameters or functionality. In doing so, these may introduce breaking changes. So workflows won't be automatically updated to use the latest version of the task.

There will be a caution icon displayed on your workflow tile to let you know that there is a more recent version available of a task. You can view the comparison of the previous version and what the new version looks like. You can continue to run your workflow with the previous version, but we suggest you upgrade to the latest version.

## Available Template Tasks

The following tasks are available as verified tasks. Their result parameters that are available for use are identified, refer to [Getting To Know Parameters](/boomerang-flow/getting-to-know/parameters) for more information on how to use result parameters or provide input to tasks with parameters.

### Artifactory

| Task Name | Description | Result Parameters |
| --------- | ----------- | ----------------- |
| **File Download** | Supplies login credentials to Artifactory (via username/password or username/API Token) and the direct URL route to the desired file. The file will be downloaded and named based upon the `Destination Path` specified. | |
| **File Upload** | Similar to the above plugin, specifies the URL to include the path in Artifactory, and specifies the name of the file at the end of the path that is displayed in Artifactory. | |

## Communication

| Task Name | Description | Result Parameters |
| --------- | ----------- | ----------------- |
| **Send Custom Slack Message** | Allows for more configuration and creates a custom JSON payload if the simple Slack message does not meet your needs. Refer to the Slack<sup>®</sup> API | |
| **Send Simple Slack Message** | Uses the wrapper plugin around the [Slack Messaging API](https://api.slack.com/messaging/sending) | |
| **Send Slack Message with File Contents** | similar to the simple Slack message, this plugin allows you to attach contents of a file. | |
| **Send Twilio SMS** | Reference the [Twilio API](https://www.twilio.com/docs/sms/api) | |
| **Send Sendgrid Email** | Using your Sendgrid API Key, send a basic email. You also have the option to supply a template ID and dynamic data in order to send a Dynamic Template mail. | |
| **Slack User Look Up** | Derives a Slack username from an email, using the Slack API. Usually used as a step before sending a Slack message to a user. | |
| **Upload Slack File with Message** | Uploads a file to Slack | |

## File Utilities

| Task Name | Description | Result Parameters |
| --------- | ----------- | ----------------- |
| **Check File Contains String**  | Specifies a direct path that includes the file name. The plugin will search to find a specified regex pattern for the file. | |
| **Check File or Folder Exists** | Searches for a file or folder. You can have the task fail if the folder/file is not found. | |
| **Create File** | Specifies a file location and its contents. | |
| **Read File to Parameter** | Specifies a file and the desired result parameter name. The file gets stored as a result parameter string and can be referenced as a value in later tasks. | |
| **Read Properties from File** | In a delimiter separated list, converts key-value pairs into result parameters that can be accessed in later tasks. List one key-value pair per line. | |
| **Replace String in a File** | Within a specified file, replaces the first instance of a string with the value supplied by the user during configuration. | |
| **Replace Tokens in a File** | Within a specified file or files, replace all occurences of tokens between a start and end pattern that all available as Parameters i.e. `@parmaeter@` would be replaced with the value of that paramter. | |

## GitHub

| Task Name | Description | Result Parameters |
| --------- | ----------- | ----------------- |
| **Find Issues and Label**           | Finds issues in a repository based on time since last activity, and adds a label and a comment. This is useful for marking issues inactive or reminding users to update an issue. | <ul><li>`repositories`</li><li>`repositoriesPrettyPrint`</li></ul> |
| **Find Issues and Remove**          | Finds GitHub<sup>®</sup> issues and removes them with optional days since activity and labels.                                                                                    |                                                                    |
| **Find Public Repositories in Org** | Finds GitHub<sup>®</sup> repositories in a particular organization that are set to public visibility.                                                                             |                                                                    |
| **Make Repositories Private**       | Loops through and changes repositories to private visibility.                                                                                                                     |                                                                    |

## IBM Services Essentials

| Task Name | Description | Result Parameters |
| --------- | ----------- | ----------------- |
| **Send Platform Email**        | Configures an email to be sent from the platform.                                                                                  |                   |
| **Send Platform Notification** | Sends a platform-wide notification. For more information on platform notifications, see the IBM Services Essentials documentation. |                   |

## ServiceNow

| Task Name | Description | Result Parameters |
| --------- | ----------- | ----------------- |
| **Get Incidents**    | Gets incidents from ServiceNow<sup>®</sup> with optional state. |                   |
| **Update Incidents** | Updates incidents from ServiceNow.                              |                   |

## Utilities

| Task Name | Description | Result Parameters |
| --------- | ----------- | ----------------- |
| **Execute HTTP Call** | Makes an HTTP request, and specifies an endpoint. | |
| **Execute Shell Script** | Supply your own script. This is a special type of Task that also allows dynamic creation of result parameters, see [Getting To Know Parameters](/boomerang-flow/getting-to-know/parameters | |
| **Json Path To Parameter** | Takes the first value returned by a valid JSONPath expression and sets as an output parameter. | |
| **Sleep** | Sleeps for a specified duration, in milliseconds. | |
